<resources>
    <string name="app_name">Got a plan?</string>
    <string name="schedule_toolbar_title">Got a plan?</string>
    <string name="schedule_add_title">Please add your timetable.</string>
    <string name="create_schedule_toolbar_title">Add Timetable</string>
    <string name="create_schedule_title">Please enter a timetable title.</string>
    <string name="create_schedule_last_day">Last day of week</string>
    <string name="create_subject_toolbar_title">Add Schedule</string>
    <string name="create_subject_title">Please enter a title.</string>
    <string name="create_subject_memo_text">Memo</string>
    <string name="create_subject_memo">There is no content.</string>
    <string name="create_subject_lesson">Lesson Mode</string>
    <string name="direct_feedback_toolbar_title">Direct Feedback</string>
    <string name="direct_feedback_title">Title (up to 20 characters)</string>
    <string name="direct_feedback_content">If you have any development, modifications, or questions, please write them down. (Up to 200 characters)</string>
    <string name="direct_feedback_gmail">Feedback is sent via the G-mail app.</string>
    <string name="help_toolbar_title">Show Guide</string>
    <string name="subject_detail_toolbar_title">Schedule Information</string>
    <string name="subject_detail_title">Title</string>
    <string name="subject_detail_memo_text">Memo</string>
    <string name="subject_detail_memo">There is no content.</string>
    <string name="subject_detail_student_text">Student Information</string>
    <string name="subject_detail_student_name">Name:</string>
    <string name="subject_detail_student_birth">Birth:</string>
    <string name="subject_detail_student_phone_number">Phone number:</string>
    <string name="subject_detail_lesson_title">Lesson Information</string>
    <string name="subject_detail_lesson_cost">Cost:</string>
    <string name="color_dialog_toolbar_title">Color</string>
    <string name="color_picker_toolbar_title">Color</string>
    <string name="edit_schedule_title_dialog_toolbar_title">Change the title</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_apply">Apply</string>
    <string name="schedule_dialog_toolbar_title">Timetable Functions</string>
    <string name="schedule_dialog_edit_schedule_title">Change the title</string>
    <string name="schedule_dialog_interval_schedule">Change the Interval</string>
    <string name="schedule_dialog_share_schedule">Share</string>
    <string name="schedule_dialog_save_schedule">Save</string>
    <string name="schedule_dialog_init_schedule">Initialize</string>
    <string name="subject_dialog_toolbar_title">Schedule Functions</string>
    <string name="subject_dialog_init_subject">Initialize</string>
    <string name="schedule_dialog_edit_time">Change the time</string>
    <string name="schedule_time_dialog_title">Change the time</string>
    <string name="am">Am</string>
    <string name="pm">Pm</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="startTime_big">Start time cannot be greater than end time.</string>
    <string name="startTime_equal">Start time cannot be the same as end time.</string>
    <string name="startMinute_minimum">The minimum time for each schedule is 30 minutes.</string>
    <string name="subject_exist_already">There is other schedule at that time.</string>
    <string name="choose_last_day">Please select the last day of the week.</string>
    <string name="choose_subject_day">Please select a day.</string>
    <string name="enter_timetable_name">Please enter a timetable name.</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>
    <string name="change_time">Change the time</string>
    <string name="lesson">Lesson Mode</string>
    <string name="create_subject_toast_enter_title">Please enter a title.</string>
    <string name="cannot_find_g_mail_app">Failed to find G-mail app.</string>
    <string name="edit_schedule_title_applied">The timetable title has been changed.</string>
    <string name="save_timetable_gallery">Image save succeeded.</string>
    <string name="none_save_timetable_gallery">Failed to save image.</string>
    <string name="initialization">Initialization</string>
    <string name="schedule_initialized">Timetable initialized.</string>
    <string name="subject_initialized">Schedules have been initialized.</string>
    <string name="delete">Delete</string>
    <string name="delete_subject">Are you sure you want to delete the schedule?</string>
    <string name="subject_deleted">The schedule has been deleted.</string>
    <string name="add_schedule_first">Please add the timetable first.</string>
    <string name="purchase_pro">Purchase Pro (no Ads)</string>
    <string name="in_app_license_key">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAgrWCzBQWDarXDScY8iopv+Cdgw09RIwZRz8vJvt8x6WhEvHFszhFa9vFXAu2IrtwSQ/GmnhCZ3KsCDDitfnQDL2KXnH5r85YYWUYzsA7r0yaRGRxJ2y9fwvB8ecCL6j6G4YhQqoaIjwwi9ovfv4PAJT3et/OiSPRozfCaN+EZSxnNnf5WoqK4RgnCeChbllRTb8e8nCaFmONg9TRUB6MnzHPWq9HXDJKluHFPAgLSOEXJKvBCoI91IlaGCY5ZiPHZHXWhccH3/GSHpr5g9kVIhsJw1VjHAkK6+Y/n6jR45Ug6SKRQfRzzxORlVSYQUN/PbPGixv9PV3RSasCXXL/kwIDAQAB</string>
    <string name="in_app_no_ads_sku">no_ads</string>
    <string name="unknown_error">An unknown error occurred.</string>
    <string name="ad_mob_app_id">ca-app-pub-4742391180869310~3307919269</string>
    <string name="front_ad_unit_id">ca-app-pub-4742391180869310/6497915737</string>
    <string name="front_ad_test">ca-app-pub-3940256099942544/1033173712</string>
    <string name="already_purchased">"You've already purchased it."</string>
    <string name="schedule_time_dialog_start_time">Start time</string>
    <string name="schedule_time_dialog_end_time">End time</string>
    <string name="schedule_time_dialog_start_min">Start time cannot be less than 06.</string>
    <string name="schedule_time_dialog_start_max">Start time cannot be greater than 24.</string>
    <string name="schedule_time_dialog_end_min">End time cannot be less than 06.</string>
    <string name="schedule_time_dialog_end_max">End time cannot be greater than 24.</string>
    <string name="schedule_time_dialog_subject_exist_time">The schedule exists at that time.</string>
    <string name="schedule_time_dialog_subject_exist_day">The schedule exists on that day of the week.</string>
    <string name="schedule_time_dialog_input_correct_last_day">Please enter the last day of week between Fri, Sat, and Sun.</string>
    <string name="guide_beginning_title">Got a plan? Guide</string>
    <string name="guide_beginning_content">Thank you for downloading our app.\n\n I\'d like to give you a basic set of\n instructions for better use.</string>
    <string name="guide_beginning_content_add">(You can always see Guide again\n via the \"Show Guide\" in the menu)</string>
    <string name="guide_timetable_first_title">1. Beginning screen</string>
    <string name="guide_timetable_first_content">Before adding a schedule, you should add \na timetable first. Press the button below \nto go to the Add Timetable screen.</string>
    <string name="guide_timetable_second_title">2. Add Timetable</string>
    <string name="guide_timetable_second_content">Here is the Add Timetable screen.\n Please set the title and time of the timetable\n as appropriate and select Last day of week.</string>
    <string name="guide_timetable_second_ex_title">2.5 Example of a timetable</string>
    <string name="guide_timetable_second_ex_content">Examples are prepared to\n help you understand.</string>
    <string name="guide_timetable_third_title">3. Time table complete!</string>
    <string name="guide_timetable_third_content">You have now laid the foundation.\n\n Use the Add Schedule button at the bottom\n right to add a schedule or the menu at the\n top right to use the add-on function.</string>
    <string name="guide_end_content">Thank you for using the Guide.</string>
    <string name="guide_end_content_add">(Guide may be added or changed\n depending on future updates)</string>
    <string name="notification">Schedule Notification</string>
    <string name="notification_on">Notification turned on.</string>
    <string name="notification_title">Notification</string>
    <string name="none">None</string>
    <string name="notification_dialog_title">Notification Settings</string>
    <string name="fixed_time">Fixed time</string>
    <string name="before_5m">5 Minutes ago</string>
    <string name="before_10m">10 Minutes ago</string>
    <string name="before_30m">30 Minutes ago</string>
    <string name="before_1h">1 Hour ago</string>
    <string name="before_12h">12 Hours ago</string>
    <string name="calculation_cycle">Cycle</string>
    <string name="calculate">Calculate</string>
    <string name="lesson_calculate_min">Cannot calculate because the value of the Cycle is zero.</string>
    <string name="lesson_calculate_max">The value of the (current)Cycle cannot be greater than the (month)Cycle value.</string>
    <string name="lesson_calculate">Lesson cost calculation</string>
    <string name="lesson_calculated">Lesson cost has been calculated!</string>
    <string name="lesson_unknown">Unknown</string>
    <string name="schedule_notify">Schedule Notification</string>
    <string name="lesson_notify">Lesson Notification</string>
    <string name="lesson_closed">Closed</string>
    <string name="lesson_proceed">Proceed</string>
    <string name="lesson_cycle_max">Unable to calculate due to exceeding the Cycle.\n(Please pay manually and use it.)</string>
    <string name="cycle_switch_auto">Do you want to use the automatic calculation?</string>
    <string name="cycle_switch_auto_help">What is automatic calculation?</string>
    <string name="guide_timetable_title">Timetable</string>
    <string name="guide_lesson_title">Lesson Mode</string>
    <string name="guide_auto_help_title">Function Guide</string>
    <string name="cycle_dialog_title_current">The current number of classes this month</string>
    <string name="cycle_dialog_title_month">The total number of classes this month</string>
    <string name="cycle_dialog_max">The current number of classes cannot be greater than the total number of classes.</string>
    <string name="cycle_dialog_min">Total number of classes cannot be less than the current number of classes.</string>
    <string name="cycle_dialog_no_notification">The automatic calculation is not available without notification.</string>
    <string name="subject_detail_cycle_no_notification">The automatic calculation is not available without notification. Do you want to turn off automatic calculation?</string>
    <string name="guide_lesson_first_title">1. What is a Lesson Mode?</string>
    <string name="guide_lesson_first_content">Lesson Mode, which is the biggest advantage\n of this app, provides special services for\n teachers to manage classes more conveniently.\n\nLesson Mode can be enabled on the \"Add\n Schedule\" and \"Schedule Information\" screens\n as shown in the following photos.</string>
    <string name="guide_lesson_second_title">2. Activate Lesson Mode</string>
    <string name="guide_lesson_second_content">When you enable Lesson Mode, the \"Schedule \nInformation\" screen will be added with the\n screen shown below. After that, you just\n need to enter the information into the item\n\n*Caution: The \"Cycle\" function can be\n complicated and difficult, so be sure to\n look at the following examples and guides!</string>
    <string name="guide_lesson_second_ex_title">2.5 Example of Lesson Mode</string>
</resources>