<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent" android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@drawable/round_bg_layout">


        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/notification_dialog_title"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/defaultAccentColor"
                    android:gravity="center_vertical"
                    android:layout_weight="1"
                    android:id="@+id/schedule_setting"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp">

            </TextView>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/schedule_setting"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:orientation="vertical"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/none"
                        android:textSize="14sp"
                        android:textColor="@color/defaultAccentColor"
                        android:gravity="center_vertical"
                        android:layout_weight="1"
                        android:id="@+id/notify_null"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        >

                </TextView>

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/fixed_time"
                        android:textSize="14sp"
                        android:textColor="@color/defaultAccentColor"
                        android:gravity="center_vertical"
                        android:layout_weight="1"
                        android:id="@+id/notify_on_time"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        >

                </TextView>

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/before_5m"
                        android:gravity="center_vertical"
                        android:textSize="14sp"
                        android:textColor="@color/defaultAccentColor"
                        android:layout_weight="1"
                        android:id="@+id/notify_before_5m"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        >

                </TextView>

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/before_10m"
                        android:textSize="14sp"
                        android:textColor="@color/defaultAccentColor"
                        android:gravity="center_vertical"
                        android:layout_weight="1"
                        android:id="@+id/notify_before_10m"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        >

                </TextView>


                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/before_30m"
                        android:textSize="14sp"
                        android:gravity="center_vertical"
                        android:textColor="@color/defaultAccentColor"
                        android:layout_weight="1"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:id="@+id/notify_before_30m">


                </TextView>

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/before_1h"
                        android:textSize="14sp"
                        android:gravity="center_vertical"
                        android:textColor="@color/defaultAccentColor"
                        android:layout_weight="1"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:id="@+id/notify_before_1h">


                </TextView>

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/before_12h"
                        android:textSize="14sp"
                        android:gravity="center_vertical"
                        android:textColor="@color/defaultAccentColor"
                        android:layout_weight="1"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:id="@+id/notify_before_12h">


                </TextView>

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>