<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent" android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="300dp"
            android:layout_height="250dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@drawable/round_bg_layout">


        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/schedule_dialog_toolbar_title"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toRightOf="parent"

                    app:layout_constraintLeft_toLeftOf="parent"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/defaultAccentColor"
                    android:gravity="center_vertical"
                    android:layout_weight="1"
                    android:id="@+id/schedule_setting"
                    android:background="@drawable/underline_bg_layout"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp">

            </TextView>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintTop_toBottomOf="@id/schedule_setting"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:orientation="vertical"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/schedule_dialog_edit_schedule_title"
                        android:textSize="16dp"
                        android:textColor="@color/defaultAccentColor"
                        android:gravity="center_vertical"
                        android:layout_weight="1"
                        android:id="@+id/editScheduleTitle"
                        >

                </TextView>

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/schedule_dialog_share_schedule"
                        android:gravity="center_vertical"
                        android:textSize="16dp"
                        android:textColor="@color/defaultAccentColor"
                        android:layout_weight="1"
                        android:id="@+id/shareSchedule"
                        >

                </TextView>

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/schedule_dialog_save_schedule"
                        android:textSize="16dp"
                        android:textColor="@color/defaultAccentColor"
                        android:gravity="center_vertical"
                        android:layout_weight="1"
                        android:id="@+id/saveSchedule"
                        >

                </TextView>


                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/schedule_dialog_init_schedule"
                        android:textSize="16dp"
                        android:gravity="center_vertical"
                        android:textColor="@color/defaultAccentColor"
                        android:layout_weight="1"
                        android:id="@+id/initSchedule">


                </TextView>


            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>