<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent" android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="320dp"
            android:layout_height="160dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@drawable/round_bg_layout">


        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/edit_schedule_title_dialog_toolbar_title"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/defaultAccentColor"
                    android:gravity="center_vertical"
                    android:layout_weight="1"
                    android:id="@+id/editScheduleTitle_setting"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp">

            </TextView>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintTop_toBottomOf="@id/editScheduleTitle_setting"
                    app:layout_constraintBottom_toTopOf="@id/scheduleTitle_choose_bar"
                    android:id="@+id/scheduleTitle_layout"
                    android:orientation="vertical"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp">

                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:hint="@string/schedule_toolbar_title"
                        android:singleLine="true"
                        android:gravity="center_vertical"
                        android:textSize="16sp"
                        android:textColor="@color/defaultAccentColor"
                        android:layout_weight="1"
                        android:maxLength="50"
                        android:id="@+id/scheduleTitle"
                        android:background="@null"
                        >

                </EditText>


            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:id="@+id/scheduleTitle_choose_bar"
                    app:layout_constraintVertical_bias="1">

                <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:id="@+id/scheduleTitle_dialog_cancel"
                        app:layout_constraintRight_toLeftOf="@id/scheduleTitle_dialog_apply"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:background="@null"
                        android:textColor="@color/defaultAccentColor"
                        android:text="@string/dialog_cancel">

                </Button>

                <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintLeft_toRightOf="@id/scheduleTitle_dialog_cancel"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:background="@null"
                        android:id="@+id/scheduleTitle_dialog_apply"
                        android:textColor="@color/defaultAccentColor"
                        android:text="@string/dialog_apply">

                </Button>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>